syntax = "proto3";
package jobworkerp.runner;

message HttpRequestArgs {
  message KeyValue {
    string key = 1;
    string value = 2;
  }
  repeated KeyValue headers = 1;
  string  method = 2;
  string  path = 3;
  optional string  body = 4;
  repeated KeyValue queries = 5;
}

