syntax = "proto3";

message KeyValue {
  string key = 1;
  string value = 2;
}

message HttpRequestArg {
    repeated KeyValue headers = 1;
    string  method = 2;
    string  path = 3;
    optional string  body = 4;
    repeated KeyValue queries = 5;
}

