syntax = "proto3";

// http request operation
message HttpRequestOperation {
    string base_url = 1;
}
